--- a/emails/confirmacao/template.html
+++ b/emails/confirmacao/template.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <title>Confirmação de E-mail</title>
 </head>
-<body style="font-family: Arial, sans-serif; text-align: center; padding: 20px;">
+<body>
     <h2>Confirme seu e-mail</h2>
     <p>Olá,</p>
     <p>Clique no botão abaixo para confirmar seu e-mail e ativar sua conta.</p>
-    <a href="{{confirmation_link}}" style="display: inline-block; padding: 10px 20px; background-color: #007BFF; color: #ffffff; text-decoration: none; border-radius: 5px; font-weight: bold;">
+    <a href="<%=linkDeConfirmacao%>" style="display: inline-block; padding: 10px 20px; background-color: #007BFF; color: #ffffff; text-decoration: none; border-radius: 5px; font-weight: bold;">
         Confirmar E-mail
-    </a>
-    <p>Ou copie e cole este link no seu navegador:</p>
-    <p><a href="{{confirmation_link}}">{{confirmation_link}}</a></p>
-    <p>Se você não solicitou este e-mail, ignore-o.</p>
-    <p><strong>Equipe EBAC Crypto Trade</strong></p>
+    </a>   
 </body>
 </html>
